Fixed z-index on custom menu

--- a/style/ours.css
+++ b/style/ours.css
@@ -87,6 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-fixed-top,
 .navbar-fixed-bottom {
     position: relative;
+    z-index: 0;
 }
 
 .navbar-fixed-top .navbar-inner, 
